# shadowsocks-crypto

./: .gitignore  Cargo.toml  README.md  README.rst
.github/workflows/: build-and-test.yml  clippy-check.yml
src/: kind.rs  lib.rs  utils.rs
src/v1/: aeadcipher.rs  cipher.rs  dummy.rs  kind.rs  mod.rs  ring.rs
src/v1/aeadcipher/: aes_ccm.rs  aes_gcm.rs  aes_gcm_siv.rs  chacha20_poly1305.rs  mod.rs  sm4_ccm.rs  sm4_gcm.rs  sm4_gcm_cipher.rs  sodium.rs  xchacha20_poly1305.rs
src/v1/aeadcipher/xchacha20_poly1305/: mod.rs  xchacha20.rs
src/v1/streamcipher/: cfb.rs  chacha20.rs  ctr.rs  mod.rs  ofb.rs  rc4.rs  rc4_md5.rs  table.rs
src/v1/streamcipher/crypto/: aes.rs  camellia.rs  mod.rs  rc4.rs
src/v2/: mod.rs
src/v2/crypto/: aes_gcm.rs  chacha20_poly1305.rs  chacha8_poly1305.rs  mod.rs  xchacha20_poly1305.rs  xchacha8_poly1305.rs
src/v2/tcp/: mod.rs
src/v2/udp/: aes_gcm.rs  chacha20_poly1305.rs  chacha8_poly1305.rs  mod.rs
