[package]
name = "shadowsocks-crypto"
version = "0.3.0"
authors = ["luozijun <luozijun.assistant@gmail.com>", "ty <zonyitoo@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["Cryptography"]
description = "Shadowsocks Crypto"
repository = "https://github.com/shadowsocks/shadowsocks-crypto"
documentation = "https://docs.rs/shadowsocks-crypto"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "v1",
    "v1-aead",
]
v1 = []
v1-stream = ["v1", "chacha20", "aes"]
v1-aead = ["v1", "aes-gcm", "chacha20poly1305", "hkdf", "sha1"]
v1-aead-extra = ["v1-aead", "aes-gcm-siv"]
ring = ["ring-compat"]

[dependencies]
cfg-if = "1.0"
rand = "0.8"
aes-gcm = { version = "0.9", optional = true }
aes-gcm-siv = { version = "0.10.3", optional = true }
chacha20poly1305 = { version = "0.9", optional = true }
ring-compat = { version = "0.4", optional = true }
md-5 = "0.10"
hkdf = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
chacha20 = { version = "0.8.1", optional = true }
aes = { version = "0.7.5", features = ["ctr"], optional = true }

[dev-dependencies]
hex = "0.4"
