[package]
name = "shadowsocks-crypto"
version = "0.4.0"
authors = ["luozijun <luozijun.assistant@gmail.com>", "ty <zonyitoo@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["Cryptography"]
description = "Shadowsocks Crypto"
repository = "https://github.com/shadowsocks/shadowsocks-crypto"
documentation = "https://docs.rs/shadowsocks-crypto"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "v1",
    "v1-aead",
]
v1 = []
v1-stream = ["v1", "chacha20", "aes"]
v1-aead = ["v1", "aes-gcm", "chacha20poly1305", "hkdf", "sha1"]
v1-aead-extra = ["v1-aead", "aes-gcm-siv", "ccm", "aes"]
v2 = ["aes", "aes-gcm", "blake3", "chacha20poly1305", "bytes"]
v2-extra = ["v2", "chacha20poly1305/reduced-round"]

ring = ["ring-compat"]
armv8 = ["aes-gcm/armv8", "aes/armv8", "aes-gcm-siv/armv8"]
neon = ["chacha20/neon"]

[dependencies]
cfg-if = "1.0"
rand = "0.8"
aes-gcm = { version = "0.9", optional = true }
aes-gcm-siv = { version = "0.10.3", optional = true }
ccm = { version = "0.4.4", optional = true }
chacha20poly1305 = { version = "0.9", optional = true }
ring-compat = { version = "0.4.1", optional = true }
md-5 = { version = "0.10" }
hkdf = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
blake3 = { version = "1.3", optional = true }
chacha20 = { version = "0.8.1", optional = true }
aes = { version = "0.7.5", features = ["ctr"], optional = true }
bytes = { version = "1.1", optional = true }

#[target.'cfg(all(unix, any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
#md-5 = { version = "0.10", features = ["asm"] }
#sha1 = { version = "0.10", features = ["asm"], optional = true }

#[target.'cfg(all(unix, target_arch = "aarch64", any(target_os = "linux", target_os = "macos")))'.dependencies]
#sha1 = { version = "0.10", features = ["asm"], optional = true }

#[target.'cfg(all(windows, any(target_arch = "x86", target_arch = "x86_64"), target_env = "gnu"))'.dependencies]
#md-5 = { version = "0.10", features = ["asm"] }
#sha1 = { version = "0.10", features = ["asm"], optional = true }

#[target.'cfg(all(windows, target_arch = "aarch64", target_env = "gnu"))'.dependencies]
#sha1 = { version = "0.10", features = ["asm"], optional = true }

[dev-dependencies]
hex = "0.4"
